complite genre module
